# pythonproject

./: .dockerignore  LICENSE  QUICK_START.md  README.md  TESTING_GUIDE.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
configs/: config.yaml
python_starter_project/: __init__.py
scripts/: dev.py  example.py  polars_example.py  test_setup.py
tests/: test_polars.py  test_sample.py
