[project]
name = "python-starter-project"
version = "0.1.0"
description = "A Python starter library using uv, devcontainers, and VS Code"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "polars",
    "pyodbc",
    "duckdb",
    "azure-identity",
    "azure-storage-blob"
]

[tool.uv]
# Removed unsupported `venv` key
# venv = ".venv"
# Dev dependencies used during development and CI
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=python_starter_project",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["python_starter_project"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]
